--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ pep8==1.7.1
 pexpect==4.7.0
 pickleshare==0.7.5
 prompt-toolkit==2.0.9
+psycopg2==2.7.6.1
 ptyprocess==0.6.0
 pycodestyle==2.5.0
 Pygments==2.4.2
