--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ pexpect==4.7.0
 pickleshare==0.7.5
 prompt-toolkit==2.0.9
 psycopg2==2.7.6.1
+psycopg2-binary==2.8.3
 ptyprocess==0.6.0
 pycodestyle==2.5.0
 Pygments==2.4.2
